hero image/text work

--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
       </div>
     </nav>
     <div class="hero">
-      <div class="hero-image">
-        <div class="hero-text">
-          <h1 class="name">Sydney Clark</h1>
+      <div class="hero-background">
+        <div class="container">
+          <div class="col-md-3">
+            <img class="hero-image" src="./media/pictures/IMG_3365 copy.JPG" />
+          </div>
+          <div class="col-md-9">
+            <h1 class="hero-text">Sydney Clark</h1>
+          </div>
         </div>
       </div>
     </div>
