--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
       <div class="hero-background">
         <div class="container">
           <div class="col-md-3">
-            <img class="hero-image" src="./media/pictures/IMG_3365 copy.JPG" />
+            <img
+              class="hero-image"
+              src="./media/pictures/hero image for desktop.png"
+            />
           </div>
           <div class="col-md-9">
             <h1 class="hero-text">Sydney Clark</h1>
@@ -65,6 +68,11 @@
         </div>
       </div>
     </div>
+    <section>
+      <div class="intro">
+        <h2>Welcome!</h2>
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
