placed a h2 and added some styling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <section>
       <div class="intro">
-        <h2>Welcome!</h2>
+        <h2 class="w-header">Welcome!</h2>
       </div>
     </section>
     <script src="./main.js"></script>
