--- a/index.html
+++ b/index.html
@@ -70,9 +70,36 @@
     </div>
     <section>
       <div class="intro">
-        <h2 class="w-header">Welcome!</h2>
+        <div class="background">
+          <h2 class="w-header">Welcome!</h2>
+          <div class="card-group">
+            <div id="fcard" class="col-md-4">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  This is a wider card with supporting text below as a natural
+                  lead-in to additional content. This content is a little bit
+                  longer.
+                </p>
+              </div>
+            </div>
+            <div id="lcard" class="col-md-4">
+              <img
+                src="./media/pictures/51d4bd026badfe7d52d5fe25a37841f9.jpeg"
+                class="card-img-top"
+                id="s-image"
+                alt="s-image"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="./main.js"></script>
   </body>
 </html>
