--- a/highschool.html
+++ b/highschool.html
@@ -53,7 +53,31 @@
         </div>
       </div>
     </nav>
-    <h1>high school stuff</h1>
+    <section id="freshman-year">
+      <div>
+        <h1>Freshman Year 2018-2019</h1>
+      </div>
+    </section>
+    <section id="sophomore-year">
+      <div>
+        <h1>Sophomore Year 2019-2020</h1>
+      </div>
+    </section>
+    <section id="junior-year">
+      <div>
+        <h1>Junior Year 2020-2021</h1>
+      </div>
+    </section>
+    <section id="senior-year">
+      <div>
+        <h1>Senior Year 2021-2022</h1>
+      </div>
+    </section>
     <script src="./main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
