added hero section

--- a/highschool.html
+++ b/highschool.html
@@ -53,6 +53,13 @@
         </div>
       </div>
     </nav>
+    <section class="highschool-hero">
+      <div class="hs-hero-image">
+        <div class="hs-hero-text">
+          <h1>High School</h1>
+        </div>
+      </div>
+    </section>
     <section id="freshman-year">
       <div>
         <h1>Freshman Year 2018-2019</h1>
