adding some content

--- a/highschool.html
+++ b/highschool.html
@@ -61,22 +61,61 @@
       </div>
     </section>
     <section id="freshman-year">
-      <div>
+      <div class="f-header">
         <h1>Freshman Year 2018-2019</h1>
+      </div>
+      <div class="f-body">
+        <div class="f-highlights">
+          <h2>Freshman Year Highlights</h2>
+          <ul>
+            <li>Started Lifting</li>
+            <li>Made my first club volleyball team</li>
+            <li>Took Computer Science Principals</li>
+            <li>Scored a 3 on my first AP Exam</li>
+          </ul>
+        </div>
+        <div class="f-learned">
+          <h2>Overall Lessons From Freshman Year</h2>
+          <p>
+            During my first year of high school I learned that it was important
+            to have good frienships/relationships with the people that support
+            me. This year I became very close with the teacher that would
+            continue to influence me through out my entire high school career,
+            Tyson Sigette. I also got the pleasure to get close with my weight
+            lifting coach, Brent Tinker. Both of these teachers both helped me
+            very much decide what to major in for college and how to also
+            maintain a healthy liftstyle.
+          </p>
+        </div>
       </div>
     </section>
     <section id="sophomore-year">
-      <div>
+      <div class="s-header">
         <h1>Sophomore Year 2019-2020</h1>
+      </div>
+      <div class="s-body">
+        <div class="s-highl">
+          <h2>Sophomore Year Highlights</h2>
+          <ul>
+            <li>First Year of NHS</li>
+            <li>Learned Java</li>
+            <li>Volunteered with SuperGirls Code!</li>
+            <li>Got my first job</li>
+          </ul>
+        </div>
+        <div class="s-leared">
+          <h2>Overall Lessons Learned from Sophomore Year</h2>
+          <p>Sophomore year was amazing to begin with.</p>
+        </div>
       </div>
     </section>
     <section id="junior-year">
-      <div>
+      <div class="j-header">
         <h1>Junior Year 2020-2021</h1>
       </div>
     </section>
     <section id="senior-year">
-      <div>
+      <div class="sen-header">
         <h1>Senior Year 2021-2022</h1>
       </div>
     </section>
