--- a/highschool.html
+++ b/highschool.html
@@ -101,17 +101,50 @@
             <li>Learned Java</li>
             <li>Volunteered with SuperGirls Code!</li>
             <li>Got my first job</li>
+            <li>Accepted into DECA</li>
           </ul>
         </div>
         <div class="s-leared">
           <h2>Overall Lessons Learned from Sophomore Year</h2>
-          <p>Sophomore year was amazing to begin with.</p>
+          <p>
+            Sophomore year was amazing to begin with. I had met several new
+            people, and I was in my second computer science class with my
+            favorite teacher. I got my first job at Cracker Barrel. Then of
+            course, covid-19 happened. I had enjoyed my spring break. I got to
+            spend more time with my family, and didn't have to worry about
+            school for about 6 months. This year I learned how to really value
+            my family. During this time as well, I got my second job because the
+            pandemic had caused Cracker Barrel to lock down. My second job was
+            at Raising Canes where I learned some great time management skills!
+          </p>
         </div>
       </div>
     </section>
     <section id="junior-year">
       <div class="j-header">
         <h1>Junior Year 2020-2021</h1>
+      </div>
+      <div class="j-body">
+        <div class="j-highlights">
+          <h2>Junior Year Highlights</h2>
+          <ul>
+            <li>Took 3 AP classes and 1 Dual Credit Course</li>
+            <li>Started throwing shot put and discus</li>
+            <li>Played my first and only season of lacrosse</li>
+            <li>Got accepted into STL Caps</li>
+            <li>Started lifting again</li>
+            <li>Helped get Cybersecurity to become a course at FHS.</li>
+          </ul>
+        </div>
+        <div class="j-learned">
+          <h2>Lessons Learned</h2>
+          <p>
+            My Junior year was rocky to start off with. Our school had us going
+            only 2 days a week, and I always had a ton of homework for first
+            semester. It was also my first year without a computer science
+            class, which I found to be very boring.
+          </p>
+        </div>
       </div>
     </section>
     <section id="senior-year">
