--- a/highschool.html
+++ b/highschool.html
@@ -141,8 +141,7 @@
           <p>
             My Junior year was rocky to start off with. Our school had us going
             only 2 days a week, and I always had a ton of homework for first
-            semester. It was also my first year without a computer science
-            class, which I found to be very boring.
+            semester. I was also juggling having to work 20+ hours a week.
           </p>
         </div>
       </div>
