finished the junior section

--- a/highschool.html
+++ b/highschool.html
@@ -83,8 +83,7 @@
             continue to influence me through out my entire high school career,
             Tyson Sigette. I also got the pleasure to get close with my weight
             lifting coach, Brent Tinker. Both of these teachers both helped me
-            very much decide what to major in for college and how to also
-            maintain a healthy liftstyle.
+            very much decide what to major in for college and how to lift.
           </p>
         </div>
       </div>
@@ -139,9 +138,13 @@
         <div class="j-learned">
           <h2>Lessons Learned</h2>
           <p>
-            My Junior year was rocky to start off with. Our school had us going
-            only 2 days a week, and I always had a ton of homework for first
-            semester. I was also juggling having to work 20+ hours a week.
+            My Junior year was rocky to start off with. Our school had students
+            going only 2 days a week, and I always had a ton of homework for
+            first semester. During my second semester, I got back into lifting,
+            started play lacrosse, and throwing shot put and discus for my high
+            school team. During this time I learned a lot of time management
+            skills, work in teams, how to be competitive, and how to live a
+            healthy work style.
           </p>
         </div>
       </div>
@@ -149,6 +152,16 @@
     <section id="senior-year">
       <div class="sen-header">
         <h1>Senior Year 2021-2022</h1>
+      </div>
+      <div class="sen-body">
+        <div class="sen-highlights">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
       </div>
     </section>
     <script src="./main.js"></script>
