finished the senior section

--- a/highschool.html
+++ b/highschool.html
@@ -101,6 +101,7 @@
             <li>Volunteered with SuperGirls Code!</li>
             <li>Got my first job</li>
             <li>Accepted into DECA</li>
+            <li>Won the NCWIT Local Winner Award</li>
           </ul>
         </div>
         <div class="s-leared">
@@ -133,6 +134,8 @@
             <li>Got accepted into STL Caps</li>
             <li>Started lifting again</li>
             <li>Helped get Cybersecurity to become a course at FHS.</li>
+            <li>Got my first car</li>
+            <li>Got a new cat, Frankie</li>
           </ul>
         </div>
         <div class="j-learned">
@@ -156,11 +159,25 @@
       <div class="sen-body">
         <div class="sen-highlights">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Accepted into Missouri S&T!</li>
+            <li>Started STL Caps Technology and Logistics</li>
+            <li>Went to State for DECA</li>
+            <li>Started my third job</li>
+            <li>Won the NCWIT National Honarable Mention Award</li>
           </ul>
+        </div>
+        <div class="sen-lessons">
+          <h2>Overall Lessons Learned</h2>
+          <p>
+            While I am still techincally in my senior year, I know a majority of
+            what I learned. This year I learned more about computer science and
+            different types of computer science jobs in the real world. These
+            expireiences helped me become sure that I wanted to major in
+            computer engineering and computer science. This year I also met so
+            many great people in my Caps class, and I will always be greatful
+            that I had the oppurtunity to learn with them and grow some long
+            lasting relationships.
+          </p>
         </div>
       </div>
     </section>
