--- a/highschool.html
+++ b/highschool.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>High School</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./hs-styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -54,9 +54,14 @@
       </div>
     </nav>
     <section class="highschool-hero">
-      <div class="hs-hero-image">
+      <div>
+        <img
+          src="./media/pictures/womeninstem.JPG"
+          alt="NCWIT Women in Stem at FHS."
+          class="hs-hero-image"
+        />
         <div class="hs-hero-text">
-          <h1>High School</h1>
+          <h1 class="hero-header">High School</h1>
         </div>
       </div>
     </section>
