started working on the stl caps page as well.

--- a/programming.html
+++ b/programming.html
@@ -39,9 +39,6 @@
               <a class="nav-link" href="./highschool.html">High School</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./jobs.html">Job Experience</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="./programming.html"
                 >Programming Experience</a
               >
@@ -53,7 +50,48 @@
         </div>
       </div>
     </nav>
-    <h1>Programming stuff</h1>
+    <section>
+      <div class="p-content">
+        <div class="begin">
+          <h1>Early Interest</h1>
+          <p>
+            I first got into programming during a summer school course right
+            before my 5th grade year. I love moving block to make logic gates,
+            and solving the little puzzles. I would've never expected to
+            accomplish so much towards my goal since.
+          </p>
+        </div>
+        <div class="leading">
+          <h1>Expierence Leading Up to STL Caps</h1>
+          <p>
+            My freshman year of High School I learned blocky, python, and some
+            javascript. During my sophomore year of high school I learned purely
+            Java. My junior year, there was no computer science courses for me
+            to take, so I didn't take any. Although I did send emails, and push
+            for cybersecurity to be taught at my high school.
+          </p>
+        </div>
+        <div class="present">
+          <h1>Expierence 2021-2022 school year</h1>
+          <p>
+            My senior year I had taken cybersecurity and technology and
+            logistics with STL Caps at the same time. So this year I learned
+            linux, git/github, and other types of Operating Systems. I also
+            learned HTML, and CSS. I had never taken a website developement
+            course ever, and so this was a new challenge for me. I got to also
+            relearn javascript! Then I also started learning about svelte.
+          </p>
+          <p>
+            This year, I really learned more about actual applications of
+            computer science and the different types of jobs that it offers with
+            that major. Before all I knew was that I liked programming, now I
+            know that some posistions that I would look into for internships,
+            and when I graduate college.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <script src="./main.js"></script>
   </body>
 </html>
