started working on set up for the last page

--- a/stlcaps.html
+++ b/stlcaps.html
@@ -50,7 +50,29 @@
         </div>
       </div>
     </nav>
-    <h1>stl caps stuff</h1>
+    <section>
+      <div class="stl-body">
+        <div class="start">
+          <h1>STL Caps</h1>
+          <p>
+            I am so greatful that I got to be in the STL Caps program as I
+            learned some great skills, and made met so many great people
+          </p>
+        </div>
+        <div class="skills">
+          <h2>Skills Learned</h2>
+          <ul>
+            <li>How to dress Approriately</li>
+            <li>How to speak up for myself</li>
+            <li>
+              Reaching out to others to learn more about topics I'm interested
+              in
+            </li>
+            <li>Making great pitch ideas.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
