--- a/index.html
+++ b/index.html
@@ -14,58 +14,56 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">My Portfolio</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./highschool.html">High School</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./programming.html"
-                >Programming Experience</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./stlcaps.html">STL Caps Experience</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="hero">
-      <div class="hero-background">
-        <div class="container">
-          <div class="col-md-3">
-            <img
-              class="hero-image"
-              src="./media/pictures/hero image for desktop.png"
-            />
-          </div>
-          <div class="col-md-9">
-            <h1 class="hero-text">Sydney Clark</h1>
-          </div>
-        </div>
-      </div>
-    </div>
     <section>
+      <nav id="cont" class="navbar navbar-expand-lg navbar-light">
+        <div id="target" class="container-fluid">
+          <a class="navbar-brand" href="./index.html">My Portfolio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./highschool.html">High School</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./programming.html"
+                  >Programming Experience</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./stlcaps.html"
+                  >STL Caps Experience</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <section id="container">
+      <div class="hero">
+        <div class="hero-background">
+          <div class="container">
+            <div class="col-md-3">
+              <img class="hero-image" src="./media/pictures/mirrorselfie.JPG" />
+            </div>
+            <div class="col-md-9">
+              <h1 class="hero-text">Sydney Clark</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="container">
       <div class="intro">
         <div class="background">
           <h2 class="w-header">Welcome!</h2>
