worked on the intro section

--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
           <h2 class="w-header">Welcome!</h2>
           <div class="card-group">
             <div id="fcard" class="col-md-4">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+              <div class="card-body" id="i-text">
+                <h5 class="card-title">Introduction</h5>
                 <p class="card-text">
-                  This is a wider card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
+                  This is my personal portfolio! This website goes over my high
+                  school expireiences, programming background, and my STL Caps
+                  expierence!
                 </p>
               </div>
             </div>
             <div id="lcard" class="col-md-4">
               <img
-                src="./media/pictures/51d4bd026badfe7d52d5fe25a37841f9.jpeg"
+                src="./media/pictures/prettyQuote1.JPG"
                 class="card-img-top"
                 id="s-image"
                 alt="s-image"
