finished with the home page

--- a/stlcaps.html
+++ b/stlcaps.html
@@ -14,42 +14,41 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">My Portfolio</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./highschool.html">High School</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./programming.html"
-                >Programming Experience</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./stlcaps.html">STL Caps Experience</a>
-            </li>
-          </ul>
+    <section>
+      <nav id="cont" class="navbar navbar-expand-lg navbar-light">
+        <div id="target" class="container-fluid">
+          <a class="navbar-brand" href="./index.html">My Portfolio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./highschool.html">High School</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./programming.html"
+                  >Programming Experience</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./stlcaps.html"
+                  >STL Caps Experience</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </section>
     <section>
       <div class="stl-body">
         <div class="start">
