--- a/highschool.html
+++ b/highschool.html
@@ -14,42 +14,41 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">My Portfolio</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./index.html"
-                >Home</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./highschool.html">High School</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./programming.html"
-                >Programming Experience</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./stlcaps.html">STL Caps Experience</a>
-            </li>
-          </ul>
+    <section>
+      <nav id="cont" class="navbar navbar-expand-lg navbar-light">
+        <div id="target" class="container-fluid">
+          <a class="navbar-brand" href="./index.html">My Portfolio</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="./highschool.html">High School</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./programming.html"
+                  >Programming Experience</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./stlcaps.html"
+                  >STL Caps Experience</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </section>
     <section class="highschool-hero">
       <div>
         <img
@@ -62,13 +61,14 @@
         </div>
       </div>
     </section>
+    <h2 class="body-header">Highschool Highlights and Lessons</h2>
     <section id="freshman-year">
       <div class="f-header">
-        <h1>Freshman Year 2018-2019</h1>
+        <h2>Freshman Year 2018-2019</h2>
       </div>
       <div class="f-body">
         <div class="f-highlights">
-          <h2>Freshman Year Highlights</h2>
+          <h3>Freshman Year Highlights</h3>
           <ul>
             <li>Started Lifting</li>
             <li>Made my first club volleyball team</li>
@@ -77,7 +77,7 @@
           </ul>
         </div>
         <div class="f-learned">
-          <h2>Overall Lessons From Freshman Year</h2>
+          <h3>Overall Lessons From Freshman Year</h3>
           <p>
             During my first year of high school I learned that it was important
             to have good frienships/relationships with the people that support
@@ -92,11 +92,11 @@
     </section>
     <section id="sophomore-year">
       <div class="s-header">
-        <h1>Sophomore Year 2019-2020</h1>
+        <h2>Sophomore Year 2019-2020</h2>
       </div>
       <div class="s-body">
         <div class="s-highl">
-          <h2>Sophomore Year Highlights</h2>
+          <h3>Sophomore Year Highlights</h3>
           <ul>
             <li>First Year of NHS</li>
             <li>Learned Java</li>
@@ -107,7 +107,7 @@
           </ul>
         </div>
         <div class="s-leared">
-          <h2>Overall Lessons Learned from Sophomore Year</h2>
+          <h3>Overall Lessons Learned from Sophomore Year</h3>
           <p>
             Sophomore year was amazing to begin with. I had met several new
             people, and I was in my second computer science class with my
@@ -124,11 +124,11 @@
     </section>
     <section id="junior-year">
       <div class="j-header">
-        <h1>Junior Year 2020-2021</h1>
+        <h2>Junior Year 2020-2021</h2>
       </div>
       <div class="j-body">
         <div class="j-highlights">
-          <h2>Junior Year Highlights</h2>
+          <h3>Junior Year Highlights</h3>
           <ul>
             <li>Took 3 AP classes and 1 Dual Credit Course</li>
             <li>Started throwing shot put and discus</li>
@@ -141,7 +141,7 @@
           </ul>
         </div>
         <div class="j-learned">
-          <h2>Lessons Learned</h2>
+          <h3>Lessons Learned</h3>
           <p>
             My Junior year was rocky to start off with. Our school had students
             going only 2 days a week, and I always had a ton of homework for
@@ -156,10 +156,11 @@
     </section>
     <section id="senior-year">
       <div class="sen-header">
-        <h1>Senior Year 2021-2022</h1>
+        <h2>Senior Year 2021-2022</h2>
       </div>
       <div class="sen-body">
         <div class="sen-highlights">
+          <h3>Senior Year Highlights</h3>
           <ul>
             <li>Accepted into Missouri S&T!</li>
             <li>Started STL Caps Technology and Logistics</li>
@@ -169,7 +170,7 @@
           </ul>
         </div>
         <div class="sen-lessons">
-          <h2>Overall Lessons Learned</h2>
+          <h3>Overall Lessons Learned</h3>
           <p>
             While I am still techincally in my senior year, I know a majority of
             what I learned. This year I learned more about computer science and
