added image to the landing page and started highschool

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
     <section id="container">
       <div class="intro">
         <div class="background">
+          <section class="detail">
+            <img
+              class="blue"
+              src="./media/pictures/blacknwhite.png"
+              alt="butterfly"
+            />
+          </section>
           <h2 class="w-header">Welcome!</h2>
           <div class="card-group">
             <div id="fcard" class="col-md-4">
