--- a/highschool.html
+++ b/highschool.html
@@ -50,140 +50,149 @@
       </nav>
     </section>
     <section class="highschool-hero">
-      <div>
+      <div class="imgs">
         <img
           src="./media/pictures/womeninstem.JPG"
           alt="NCWIT Women in Stem at FHS."
           class="hs-hero-image"
         />
+        <img src="./media/pictures/stars.png" alt="stars" class="stars" />
         <div class="hs-hero-text">
           <h1 class="hero-header">High School</h1>
         </div>
       </div>
     </section>
-    <h2 class="body-header">Highschool Highlights and Lessons</h2>
-    <section id="freshman-year">
-      <div class="f-header">
-        <h2>Freshman Year 2018-2019</h2>
-      </div>
-      <div class="f-body">
-        <div class="f-highlights">
-          <h3>Freshman Year Highlights</h3>
-          <ul>
-            <li>Started Lifting</li>
-            <li>Made my first club volleyball team</li>
-            <li>Took Computer Science Principals</li>
-            <li>Scored a 3 on my first AP Exam</li>
-          </ul>
+    <div class="n-hero">
+      <section id="b-header">
+        <div>
+          <h2 class="body-header">Highschool Highlights and Lessons</h2>
         </div>
-        <div class="f-learned">
-          <h3>Overall Lessons From Freshman Year</h3>
-          <p>
-            During my first year of high school I learned that it was important
-            to have good frienships/relationships with the people that support
-            me. This year I became very close with the teacher that would
-            continue to influence me through out my entire high school career,
-            Tyson Sigette. I also got the pleasure to get close with my weight
-            lifting coach, Brent Tinker. Both of these teachers both helped me
-            very much decide what to major in for college and how to lift.
-          </p>
+      </section>
+      <section id="freshman-year">
+        <div class="f-header">
+          <h2>Freshman Year 2018-2019</h2>
         </div>
-      </div>
-    </section>
-    <section id="sophomore-year">
-      <div class="s-header">
-        <h2>Sophomore Year 2019-2020</h2>
-      </div>
-      <div class="s-body">
-        <div class="s-highl">
-          <h3>Sophomore Year Highlights</h3>
-          <ul>
-            <li>First Year of NHS</li>
-            <li>Learned Java</li>
-            <li>Volunteered with SuperGirls Code!</li>
-            <li>Got my first job</li>
-            <li>Accepted into DECA</li>
-            <li>Won the NCWIT Local Winner Award</li>
-          </ul>
+        <div class="f-body">
+          <div class="f-highlights">
+            <h3>Freshman Year Highlights</h3>
+            <ul>
+              <li>Started Lifting</li>
+              <li>Made my first club volleyball team</li>
+              <li>Took Computer Science Principals</li>
+              <li>Scored a 3 on my first AP Exam</li>
+            </ul>
+          </div>
+          <div class="f-learned">
+            <h3>Overall Lessons From Freshman Year</h3>
+            <p>
+              During my first year of high school I learned that it was
+              important to have good frienships/relationships with the people
+              that support me. This year I became very close with the teacher
+              that would continue to influence me through out my entire high
+              school career, Tyson Sigette. I also got the pleasure to get close
+              with my weight lifting coach, Brent Tinker. Both of these teachers
+              both helped me very much decide what to major in for college and
+              how to lift.
+            </p>
+          </div>
         </div>
-        <div class="s-leared">
-          <h3>Overall Lessons Learned from Sophomore Year</h3>
-          <p>
-            Sophomore year was amazing to begin with. I had met several new
-            people, and I was in my second computer science class with my
-            favorite teacher. I got my first job at Cracker Barrel. Then of
-            course, covid-19 happened. I had enjoyed my spring break. I got to
-            spend more time with my family, and didn't have to worry about
-            school for about 6 months. This year I learned how to really value
-            my family. During this time as well, I got my second job because the
-            pandemic had caused Cracker Barrel to lock down. My second job was
-            at Raising Canes where I learned some great time management skills!
-          </p>
+      </section>
+      <section id="sophomore-year">
+        <div class="s-header">
+          <h2>Sophomore Year 2019-2020</h2>
         </div>
-      </div>
-    </section>
-    <section id="junior-year">
-      <div class="j-header">
-        <h2>Junior Year 2020-2021</h2>
-      </div>
-      <div class="j-body">
-        <div class="j-highlights">
-          <h3>Junior Year Highlights</h3>
-          <ul>
-            <li>Took 3 AP classes and 1 Dual Credit Course</li>
-            <li>Started throwing shot put and discus</li>
-            <li>Played my first and only season of lacrosse</li>
-            <li>Got accepted into STL Caps</li>
-            <li>Started lifting again</li>
-            <li>Helped get Cybersecurity to become a course at FHS.</li>
-            <li>Got my first car</li>
-            <li>Got a new cat, Frankie</li>
-          </ul>
+        <div class="s-body">
+          <div class="s-highl">
+            <h3>Sophomore Year Highlights</h3>
+            <ul>
+              <li>First Year of NHS</li>
+              <li>Learned Java</li>
+              <li>Volunteered with SuperGirls Code!</li>
+              <li>Got my first job</li>
+              <li>Accepted into DECA</li>
+              <li>Won the NCWIT Local Winner Award</li>
+            </ul>
+          </div>
+          <div class="s-leared">
+            <h3>Overall Lessons Learned from Sophomore Year</h3>
+            <p>
+              Sophomore year was amazing to begin with. I had met several new
+              people, and I was in my second computer science class with my
+              favorite teacher. I got my first job at Cracker Barrel. Then of
+              course, covid-19 happened. I had enjoyed my spring break. I got to
+              spend more time with my family, and didn't have to worry about
+              school for about 6 months. This year I learned how to really value
+              my family. During this time as well, I got my second job because
+              the pandemic had caused Cracker Barrel to lock down. My second job
+              was at Raising Canes where I learned some great time management
+              skills!
+            </p>
+          </div>
         </div>
-        <div class="j-learned">
-          <h3>Lessons Learned</h3>
-          <p>
-            My Junior year was rocky to start off with. Our school had students
-            going only 2 days a week, and I always had a ton of homework for
-            first semester. During my second semester, I got back into lifting,
-            started play lacrosse, and throwing shot put and discus for my high
-            school team. During this time I learned a lot of time management
-            skills, work in teams, how to be competitive, and how to live a
-            healthy work style.
-          </p>
+      </section>
+      <section id="junior-year">
+        <div class="j-header">
+          <h2>Junior Year 2020-2021</h2>
         </div>
-      </div>
-    </section>
-    <section id="senior-year">
-      <div class="sen-header">
-        <h2>Senior Year 2021-2022</h2>
-      </div>
-      <div class="sen-body">
-        <div class="sen-highlights">
-          <h3>Senior Year Highlights</h3>
-          <ul>
-            <li>Accepted into Missouri S&T!</li>
-            <li>Started STL Caps Technology and Logistics</li>
-            <li>Went to State for DECA</li>
-            <li>Started my third job</li>
-            <li>Won the NCWIT National Honarable Mention Award</li>
-          </ul>
+        <div class="j-body">
+          <div class="j-highlights">
+            <h3>Junior Year Highlights</h3>
+            <ul>
+              <li>Took 3 AP classes and 1 Dual Credit Course</li>
+              <li>Started throwing shot put and discus</li>
+              <li>Played my first and only season of lacrosse</li>
+              <li>Got accepted into STL Caps</li>
+              <li>Started lifting again</li>
+              <li>Helped get Cybersecurity to become a course at FHS.</li>
+              <li>Got my first car</li>
+              <li>Got a new cat, Frankie</li>
+            </ul>
+          </div>
+          <div class="j-learned">
+            <h3>Lessons Learned</h3>
+            <p>
+              My Junior year was rocky to start off with. Our school had
+              students going only 2 days a week, and I always had a ton of
+              homework for first semester. During my second semester, I got back
+              into lifting, started play lacrosse, and throwing shot put and
+              discus for my high school team. During this time I learned a lot
+              of time management skills, work in teams, how to be competitive,
+              and how to live a healthy work style.
+            </p>
+          </div>
         </div>
-        <div class="sen-lessons">
-          <h3>Overall Lessons Learned</h3>
-          <p>
-            While I am still techincally in my senior year, I know a majority of
-            what I learned. This year I learned more about computer science and
-            different types of computer science jobs in the real world. These
-            expireiences helped me become sure that I wanted to major in
-            computer engineering and computer science. This year I also met so
-            many great people in my Caps class, and I will always be greatful
-            that I had the oppurtunity to learn with them and grow some long
-            lasting relationships.
-          </p>
+      </section>
+      <section id="senior-year">
+        <div class="sen-header">
+          <h2>Senior Year 2021-2022</h2>
         </div>
-      </div>
-    </section>
+        <div class="sen-body">
+          <div class="sen-highlights">
+            <h3>Senior Year Highlights</h3>
+            <ul>
+              <li>Accepted into Missouri S&T!</li>
+              <li>Started STL Caps Technology and Logistics</li>
+              <li>Went to State for DECA</li>
+              <li>Started my third job</li>
+              <li>Won the NCWIT National Honarable Mention Award</li>
+            </ul>
+          </div>
+          <div class="sen-lessons">
+            <h3>Overall Lessons Learned</h3>
+            <p>
+              While I am still techincally in my senior year, I know a majority
+              of what I learned. This year I learned more about computer science
+              and different types of computer science jobs in the real world.
+              These expireiences helped me become sure that I wanted to major in
+              computer engineering and computer science. This year I also met so
+              many great people in my Caps class, and I will always be greatful
+              that I had the oppurtunity to learn with them and grow some long
+              lasting relationships.
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
     <script src="./main.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
