working on the rest of the sophomore section and junior section

--- a/highschool.html
+++ b/highschool.html
@@ -74,25 +74,32 @@
         </div>
         <div class="f-body">
           <div class="f-highlights">
-            <h3>Freshman Year Highlights</h3>
-            <ul>
-              <li>Started Lifting</li>
-              <li>Made my first club volleyball team</li>
-              <li>Took Computer Science Principals</li>
-              <li>Scored a 3 on my first AP Exam</li>
-            </ul>
+            <h3 id="fh-title">Freshman Year Highlights</h3>
+            <div class="fh-content">
+              <ul id="f-list">
+                <li>Started Lifting</li>
+                <li>Made my first club volleyball team</li>
+                <li>Took Computer Science Principals</li>
+                <li>Scored a 3 on my first AP Exam</li>
+              </ul>
+              <img
+                src="./media/pictures/freshmanyear.jpg"
+                alt="freshie syd"
+                class="f-syd"
+              />
+            </div>
           </div>
           <div class="f-learned">
-            <h3>Overall Lessons From Freshman Year</h3>
-            <p>
+            <h3 id="fo-title">Overall Lessons From Freshman Year</h3>
+            <p id="fo">
               During my first year of high school I learned that it was
-              important to have good frienships/relationships with the people
+              important to have good friendships/relationships with the people
               that support me. This year I became very close with the teacher
               that would continue to influence me through out my entire high
               school career, Tyson Sigette. I also got the pleasure to get close
               with my weight lifting coach, Brent Tinker. Both of these teachers
               both helped me very much decide what to major in for college and
-              how to lift.
+              how to challenge myself physically.
             </p>
           </div>
         </div>
@@ -103,19 +110,26 @@
         </div>
         <div class="s-body">
           <div class="s-highl">
-            <h3>Sophomore Year Highlights</h3>
-            <ul>
-              <li>First Year of NHS</li>
-              <li>Learned Java</li>
-              <li>Volunteered with SuperGirls Code!</li>
-              <li>Got my first job</li>
-              <li>Accepted into DECA</li>
-              <li>Won the NCWIT Local Winner Award</li>
-            </ul>
+            <h3 id="sh-title">Sophomore Year Highlights</h3>
+            <div class="s-content">
+              <ul id="sop-list">
+                <li>First Year of NHS</li>
+                <li>Learned Java</li>
+                <li>Volunteered with SuperGirls Code!</li>
+                <li>Got my first job</li>
+                <li>Accepted into DECA</li>
+                <li>Won the NCWIT Local Winner Award</li>
+              </ul>
+              <img
+                src="./media/pictures/sophomore.png"
+                class="sop-syd"
+                alt="sophomore syd"
+              />
+            </div>
           </div>
           <div class="s-leared">
-            <h3>Overall Lessons Learned from Sophomore Year</h3>
-            <p>
+            <h3 id="so-title">Overall Lessons Learned from Sophomore Year</h3>
+            <p id="so">
               Sophomore year was amazing to begin with. I had met several new
               people, and I was in my second computer science class with my
               favorite teacher. I got my first job at Cracker Barrel. Then of
@@ -136,21 +150,28 @@
         </div>
         <div class="j-body">
           <div class="j-highlights">
-            <h3>Junior Year Highlights</h3>
-            <ul>
-              <li>Took 3 AP classes and 1 Dual Credit Course</li>
-              <li>Started throwing shot put and discus</li>
-              <li>Played my first and only season of lacrosse</li>
-              <li>Got accepted into STL Caps</li>
-              <li>Started lifting again</li>
-              <li>Helped get Cybersecurity to become a course at FHS.</li>
-              <li>Got my first car</li>
-              <li>Got a new cat, Frankie</li>
-            </ul>
+            <h3 id="jh-title">Junior Year Highlights</h3>
+            <div class="j-content">
+              <ul id="j-list">
+                <li>Took 3 AP classes and 1 Dual Credit Course</li>
+                <li>Started throwing shot put and discus</li>
+                <li>Played my first and only season of lacrosse</li>
+                <li>Got accepted into STL Caps</li>
+                <li>Started lifting again</li>
+                <li>Helped get Cybersecurity to become a course at FHS.</li>
+                <li>Got my first car</li>
+                <li>Got a new cat, Frankie</li>
+              </ul>
+              <img
+                src="./media/pictures/junioryear.png.JPG"
+                alt="Junior Year Me"
+                class="jun-syd"
+              />
+            </div>
           </div>
           <div class="j-learned">
-            <h3>Lessons Learned</h3>
-            <p>
+            <h3 id="jo-title">Lessons Learned</h3>
+            <p id="jo">
               My Junior year was rocky to start off with. Our school had
               students going only 2 days a week, and I always had a ton of
               homework for first semester. During my second semester, I got back
