finish styling the high school page

--- a/highschool.html
+++ b/highschool.html
@@ -189,18 +189,25 @@
         </div>
         <div class="sen-body">
           <div class="sen-highlights">
-            <h3>Senior Year Highlights</h3>
-            <ul>
-              <li>Accepted into Missouri S&T!</li>
-              <li>Started STL Caps Technology and Logistics</li>
-              <li>Went to State for DECA</li>
-              <li>Started my third job</li>
-              <li>Won the NCWIT National Honarable Mention Award</li>
-            </ul>
+            <h3 id="senh-title">Senior Year Highlights</h3>
+            <div class="sen-content">
+              <ul id="seno-list">
+                <li>Accepted into Missouri S&T!</li>
+                <li>Started STL Caps Technology and Logistics</li>
+                <li>Went to State for DECA</li>
+                <li>Started my third job</li>
+                <li>Won the NCWIT National Honarable Mention Award</li>
+              </ul>
+              <img
+                src="./media/pictures/senioryear.JPG"
+                class="sen-syd"
+                alt="senior prom"
+              />
+            </div>
           </div>
           <div class="sen-lessons">
-            <h3>Overall Lessons Learned</h3>
-            <p>
+            <h3 id="seno-title">Overall Lessons Learned</h3>
+            <p id="seno">
               While I am still techincally in my senior year, I know a majority
               of what I learned. This year I learned more about computer science
               and different types of computer science jobs in the real world.
