--- a/programming.html
+++ b/programming.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Programming</title>
-    <link rel="stylesheet" href="./p.styles.css" />
+    <link rel="stylesheet" href="./p-styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -49,29 +49,58 @@
         </div>
       </nav>
     </section>
-    <section>
+    <section class="hero">
+      <div class="imgs">
+        <img
+          src="./media/pictures/pinkproghero.jpeg"
+          alt="hero image"
+          class="prog-hero"
+        />
+        <img
+          src="./media/pictures/transparent-butterfly-images-24.png"
+          alt="butterflies"
+          class="sec-hero"
+        />
+        <h1 class="hero-text">Programming Expierence</h1>
+      </div>
+    </section>
+    <section class="cont">
       <div class="p-content">
         <div class="begin">
-          <h1>Early Interest</h1>
-          <p>
-            I first got into programming during a summer school course right
-            before my 5th grade year. I love moving block to make logic gates,
-            and solving the little puzzles. I would've never expected to
-            accomplish so much towards my goal since.
-          </p>
+          <h1 class="rig">Early Interest</h1>
+          <div class="e-content">
+            <img
+              src="./media/pictures/tinysyd.JPG"
+              alt="young syd"
+              class="y-syd"
+            />
+            <p class="y-cont">
+              I first got into programming during a summer school course right
+              before my 5th grade year. I love moving block to make logic gates,
+              and solving the little puzzles. I would've never expected to
+              accomplish so much towards my goal since.
+            </p>
+          </div>
         </div>
         <div class="leading">
-          <h1>Expierence Leading Up to STL Caps</h1>
-          <p>
-            My freshman year of High School I learned blocky, python, and some
-            javascript. During my sophomore year of high school I learned purely
-            Java. My junior year, there was no computer science courses for me
-            to take, so I didn't take any. Although I did send emails, and push
-            for cybersecurity to be taught at my high school.
-          </p>
+          <h1 class="opp">Expierence Leading Up to STL Caps</h1>
+          <div class="l-content">
+            <p class="x-cont">
+              My freshman year of High School I learned blocky, python, and some
+              javascript. During my sophomore year of high school I learned
+              purely Java. My junior year, there was no computer science courses
+              for me to take, so I didn't take any. Although I did send emails,
+              and push for cybersecurity to be taught at my high school.
+            </p>
+            <img
+              src="./media/pictures/leadingselfie.JPG"
+              alt="sophomore year"
+              class="l-pic"
+            />
+          </div>
         </div>
         <div class="present">
-          <h1>Expierence 2021-2022 school year</h1>
+          <h1 class="rig">Expierence 2021-2022 school year</h1>
           <p>
             My senior year I had taken cybersecurity and technology and
             logistics with STL Caps at the same time. So this year I learned
