finished styling the programming page

--- a/programming.html
+++ b/programming.html
@@ -101,21 +101,26 @@
         </div>
         <div class="present">
           <h1 class="rig">Expierence 2021-2022 school year</h1>
-          <p>
-            My senior year I had taken cybersecurity and technology and
-            logistics with STL Caps at the same time. So this year I learned
-            linux, git/github, and other types of Operating Systems. I also
-            learned HTML, and CSS. I had never taken a website developement
-            course ever, and so this was a new challenge for me. I got to also
-            relearn javascript! Then I also started learning about svelte.
-          </p>
-          <p>
-            This year, I really learned more about actual applications of
-            computer science and the different types of jobs that it offers with
-            that major. Before all I knew was that I liked programming, now I
-            know that some posistions that I would look into for internships,
-            and when I graduate college.
-          </p>
+          <div class="f-can">
+            <img
+              src="./media/pictures/awardJPG.JPG"
+              alt="the award"
+              class="f-image"
+            />
+            <p class="f-cont">
+              My senior year I had taken cybersecurity and technology and
+              logistics with STL Caps at the same time. So this year I learned
+              linux, git/github, and other types of Operating Systems. I also
+              learned HTML, and CSS. I had never taken a website developement
+              course ever, and so this was a new challenge for me. I got to
+              relearn javascript and learn svelte. This year, I really learned
+              more about actual applications of computer science and the
+              different types of jobs that it offers with that major. Before all
+              I knew was that I liked programming, now I know that some
+              posistions that I would look into for internships, and when I
+              graduate college.
+            </p>
+          </div>
         </div>
       </div>
     </section>
