finished styling the stl caps page

--- a/stlcaps.html
+++ b/stlcaps.html
@@ -49,26 +49,45 @@
         </div>
       </nav>
     </section>
-    <section>
+    <section class="hero">
+      <img
+        src="./media/pictures/capsmirror.PNG"
+        alt="the amazing mirror selfie"
+        class="hero-image"
+      />
+      <h1 class="hero-text">STL Caps</h1>
+    </section>
+    <section class="content">
       <div class="stl-body">
-        <div class="start">
-          <h1>STL Caps</h1>
-          <p>
-            I am so greatful that I got to be in the STL Caps program as I
-            learned some great skills, and made met so many great people
-          </p>
-        </div>
         <div class="skills">
-          <h2>Skills Learned</h2>
-          <ul>
+          <h2 class="f-header">Skills I've Learned</h2>
+          <ul id="s-list">
             <li>How to dress Approriately</li>
             <li>How to speak up for myself</li>
             <li>
-              Reaching out to others to learn more about topics I'm interested
+              Reaching out to experts to learn more about topics I'm interested
               in
             </li>
             <li>Making great pitch ideas.</li>
+            <li>How to research a programming question more directly</li>
           </ul>
+        </div>
+        <div class="overall">
+          <h2 class="s-header">Appreciation</h2>
+          <div class="flex">
+            <img
+              src="./media/pictures/pitchcomp.JPG"
+              alt="pitch comp"
+              class="pit-comp"
+            />
+            <p id="s-body">
+              I'm so greatful to have this kind of oppurtunity to meet everyone
+              that's helped me in this program. This includes teachers,
+              classmates, and other presenters. I've truly learned so much from
+              this course about my dream job, and for that I will forver be
+              grateful for. So thank you all!
+            </p>
+          </div>
         </div>
       </div>
     </section>
