added a footer with my socials

--- a/programming.html
+++ b/programming.html
@@ -12,6 +12,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <section>
@@ -124,7 +128,36 @@
         </div>
       </div>
     </section>
-
+    <section id="cont">
+      <div class="cont">
+        <div class="socials">
+          <div class="instagram">
+            <a
+              id="one"
+              class="fa fa-instagram"
+              href="https://www.instagram.com/sydclark_/?hl=en"
+            >
+            </a>
+          </div>
+          <div class="twitter">
+            <a
+              id="two"
+              class="fa fa-twitter"
+              href="https://twitter.com/syddddthekid"
+            >
+            </a>
+          </div>
+          <div class="facebook">
+            <a
+              id="three"
+              class="fa fa-facebook"
+              href="https://www.facebook.com/sydney.clark.7712/"
+            >
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./main.js"></script>
   </body>
 </html>
